@@ -12,8 +12,10 @@ New RPC command for read only (watch) HD seeds, getreadonlyseed.
 New 'deleteaccount' RPC command
 Add new command line flag '-coinbasesignature=' to make it easy to add coinbase signatures to generated blocks (predominantly meant for testnet)
 Add a special warning if the users wallet.dat is readonly (instead of displaying a generic/scary 'corrupted wallet' message) 
+Modify 'move' RPC command so that it can handle `-1` as input for the amount field, passing '-1' will calculate the available balance in the account for the confirmation level passed and transfer all of it.
 Merge a bug fix from user 'mezrin' for 'dumpwallet' RPC command.
 Fix a bug in RPC command 'gettransaction' where transaction would not show if 'rpconlylistsecuredtransactions' flag was set to false.
+Assorted other minor bug fixes.
 
 1.6.3
 
